--- a/options.html
+++ b/options.html
@@ -5,10 +5,10 @@
  <body style="background-color: black">
   <h1 style = "color: palegoldenrod; font-family: Verdana">Name the celestial event and set the countdown for specified number of hours : minutes : seconds.</h1>
   <br>
-    <input type = "name" id = "name"></input>
-    <input type = "number" id = "timerHours" style = "width: 80px"></input>
-    <input type = "number" id = "timerMinutes" style = "width: 80pix"></input>
-    <input type = "number" id = "timerSeconds" style = "width: 80pix"></input>
+    <input type = "name" id = "name" placeholder = "Celestial Event"></input>
+    <input type = "number" id = "timerHours" style = "width: 80px" placeholder = "Hours"></input>
+    <input type = "number" id = "timerMinutes" style = "width: 80pix" placeholder = "Minutes"></input>
+    <input type = "number" id = "timerSeconds" style = "width: 80pix" placeholder = "Seconds"></input>
   <button id = "save">Save</button>
  </body>
  <!-- Do not remove -->
