Added opensource images

--- a/options.html
+++ b/options.html
@@ -3,13 +3,17 @@
    <title>Celestial Countdown Options</title>
  </head>
  <body style="background-color: black">
-  <h1 style = "color: palegoldenrod; font-family: Verdana">Name the celestial event and set the countdown for specified number of hours : minutes : seconds.</h1>
+  <center><h1 style = "color: palegoldenrod; font-family: Verdana">Name the celestial event and set the countdown for specified number of hours : minutes : seconds.</h1></center>
   <br>
+    <img src = "conjunction.png" alt = "Picture of the Jupiter and Saturn conjunction." width = "250" height="200">
+    <img src = "lunareclipse.jpg" alt = "Picture of a total lunar eclipse." width = "170" height="170">
     <input type = "name" id = "name" placeholder = "Celestial Event"></input>
     <input type = "number" id = "timerHours" style = "width: 80px" placeholder = "Hours"></input>
     <input type = "number" id = "timerMinutes" style = "width: 80pix" placeholder = "Minutes"></input>
     <input type = "number" id = "timerSeconds" style = "width: 80pix" placeholder = "Seconds"></input>
   <button id = "save">Save</button>
+  <img src = "eclipses.png" alt = "Picture of a partial solar eclipse.">
+  <img src = "ringeffect.jpg" alt = "Picture of the ring effect during a solar eclipse.">
  </body>
  <!-- Do not remove -->
  <script src="options.js"></script>
