Changed some text

--- a/options.html
+++ b/options.html
@@ -3,7 +3,7 @@
    <title>Celestial Countdown Options</title>
  </head>
  <body style="background-color: black">
-  <center><h1 style = "color: palegoldenrod; font-family: Verdana">Name the celestial event and set the countdown for specified number of hours : minutes : seconds.</h1></center>
+  <center><h1 style = "color: palegoldenrod; font-family: Verdana">Enter the name of the celestial event and set the countdown for hours : minutes : seconds.</h1></center>
   <br>
     <img src = "conjunction.png" alt = "Picture of the Jupiter and Saturn conjunction." width = "250" height="200">
     <img src = "lunareclipse.jpg" alt = "Picture of a total lunar eclipse." width = "170" height="170">
