--- a/options.html
+++ b/options.html
@@ -8,9 +8,9 @@
     <img src = "conjunction.png" alt = "Picture of the Jupiter and Saturn conjunction." width = "250" height="200">
     <img src = "lunareclipse.jpg" alt = "Picture of a total lunar eclipse." width = "170" height="170">
     <input type = "name" id = "name" style = "width: 200px" placeholder = "Celestial Event"></input>
-    <input type = "number" id = "timerHours" style = "width: 100px" placeholder = "Hours"></input>
-    <input type = "number" id = "timerMinutes" style = "width: 100px" placeholder = "Minutes"></input>
-    <input type = "number" id = "timerSeconds" style = "width: 100px" placeholder = "Seconds"></input>
+    <input type = "number" id = "timerHours" style = "width: 100px" placeholder = "Hours" min = "0"></input>
+    <input type = "number" id = "timerMinutes" style = "width: 100px" placeholder = "Minutes" min = "0"></input>
+    <input type = "number" id = "timerSeconds" style = "width: 100px" placeholder = "Seconds" min = "0"></input>
   <button id = "save">Save</button>
   <img src = "eclipses.png" alt = "Picture of a partial solar eclipse.">
   <img src = "ringeffect.jpg" alt = "Picture of the ring effect during a solar eclipse.">
