Added favicon, changed some other visual things

--- a/options.html
+++ b/options.html
@@ -1,6 +1,8 @@
 <html>
  <head>
    <title>Celestial Countdown Options</title>
+   <link rel="shortcut icon" type="image/png" href="star.png"/>
+
  </head>
  <body style="background-color: black">
   <center><h1 style = "color: palegoldenrod; font-family: Verdana">Enter the name of the celestial event and set the countdown for hours : minutes : seconds</h1></center>
